--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "peerDependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0"
+    "react": "^19.0.0",
+    "react-native": "^0.78.0",
+    "react-native-gesture-handler": "^2.26.0"
   },
   "devDependencies": {
-    "typescript": "~4.3.5"
+    "@types/react": "^19.0.0",
+    "typescript": "^5.6.0"
   }
 }
